@@ -167,12 +167,12 @@
                 <h>inverse</h>
             </idx>
             <statement>
-                <p>Suppose that <m>A</m> is a nonsingular matrix of size <m>n</m> that is triangular.  Then the inverse of <m>A</m>, <m>\inverse{A}</m>, is triangular of the same type.  Furthermore, the diagonal entries of <m>\inverse{A}</m> are the reciprocals of the corresponding diagonal entries of <m>A</m>.  More precisely, <m>\matrixentry{\inverse{A}}{ii}=\matrixentry{A}{ii}^{-1}</m>.</p>
+                <p>Suppose that <m>A</m> is a matrix that is nonsingular and triangular.  Then the inverse of <m>A</m>, <m>\inverse{A}</m>, is triangular of the same type.  Furthermore, the diagonal entries of <m>\inverse{A}</m> are the reciprocals of the corresponding diagonal entries of <m>A</m>.  More precisely, <m>\matrixentry{\inverse{A}}{ii}=\matrixentry{A}{ii}^{-1}</m>.</p>
             </statement>
             <proof>
-                <p>We give the proof for the case when <m>A</m> is lower triangular, and leave the case when <m>A</m> is upper triangular for you.  Consider the process for computing the inverse of a matrix that is outlined in the proof of <xref ref="theorem-CINM" acro="CINM"/>.  We augment <m>A</m> with the size <m>n</m> identity matrix, <m>I_n</m>, and row-reduce the <m>n\times 2n</m> matrix to reduced row-echelon form via the algorithm in <xref ref="theorem-REMEF" acro="REMEF"/>.  The proof involves tracking the peculiarities of this process in the case of a lower triangular matrix.  Let <m>M=\augmented{A}{I_n}</m>.</p>
-                <p>First, none of the diagonal elements of <m>A</m> are zero.  By repeated expansion about the first row, the determinant of a lower triangular matrix can be seen to be the product of the diagonal entries (<xref ref="theorem-DER" acro="DER"/>).  If just one of these diagonal elements was zero, then the determinant of <m>A</m> is zero and <m>A</m> is singular by <xref ref="theorem-SMZD" acro="SMZD"/>.   Slightly violating the exact algorithm for row reduction we can form a matrix, <m>M^\prime</m>, that is row-equivalent to <m>M</m>, by multiplying row <m>i</m> by the nonzero scalar <m>\matrixentry{A}{ii}^{-1}</m>, for <m>1\leq i\leq n</m>.  This sets <m>\matrixentry{M^\prime}{ii}=1</m> and <m>\matrixentry{M^\prime}{i,n+1}=\matrixentry{A}{ii}^{-1}</m>, and leaves every zero entry of <m>M</m> unchanged.</p>
-                <p>Let <m>M_j</m> denote the matrix obtained form <m>M^\prime</m> after converting column <m>j</m> to a pivot column.  We can convert column <m>j</m> of <m>M_{j-1}</m> into a pivot column with a set of <m>n-j-1</m> row operations of the form <m>\rowopadd{\alpha}{j}{k}</m> with <m>j+1\leq k\leq n</m>.  The key observation here is that we add multiples of row <m>j</m> only to higher-numbered rows.  This means that none of the entries in rows <m>1</m> through <m>j-1</m> is changed, and since row <m>j</m> has zeros in columns <m>j+1</m> through <m>n</m>, none of the entries in rows <m>j+1</m> through <m>n</m> is changed in columns <m>j+1</m> through <m>n</m>.  The first <m>n</m> columns of <m>M^\prime</m> form a lower triangular matrix with 1's on the diagonal.  In its conversion to the identity matrix through this sequence of row operations, it remains lower triangular with 1's on the diagonal.</p>
+                <p>We give the proof for the case when <m>A</m> is lower triangular of size <m>n</m>, and leave the case when <m>A</m> is upper triangular for you.  Consider the process for computing the inverse of a matrix that is outlined in the proof of <xref ref="theorem-CINM" acro="CINM"/>.  We augment <m>A</m> with the size <m>n</m> identity matrix, <m>I_n</m>, and row-reduce the <m>n\times 2n</m> matrix to reduced row-echelon form via the algorithm in <xref ref="theorem-REMEF" acro="REMEF"/>.  The proof involves tracking the peculiarities of this process in the case of a lower triangular matrix.  Let <m>M=\augmented{A}{I_n}</m>.</p>
+                <p>First, by <xref ref="theorem-NTM"/>, none of the diagonal elements of <m>A</m> are zero.  We follow the procedure of <xref ref="theorem-REMEF"/>) in just a slightly different order, first creating a row-equivalent matrix <m>M^\prime</m>.  For each <m>1\leq i\leq n</m>, multiply row <m>i</m> by the nonzero scalar <m>\matrixentry{A}{ii}^{-1}</m>.  This sets <m>\matrixentry{M^\prime}{ii}=1</m> and <m>\matrixentry{M^\prime}{i,n+i}=\matrixentry{A}{ii}^{-1}</m>, and leaves every zero entry of <m>M</m> unchanged.</p>
+                <p>Let <m>M_j</m> denote the matrix obtained from <m>M^\prime</m> after converting column <m>j</m> to a pivot column.  We can convert column <m>j</m> of <m>M_{j-1}</m> into a pivot column with a set of <m>n-j-1</m> row operations of the form <m>\rowopadd{\alpha}{j}{k}</m> with <m>j+1\leq k\leq n</m>.  The key observation here is that we add multiples of row <m>j</m> only to higher-numbered rows.  This means that none of the entries in rows <m>1</m> through <m>j-1</m> is changed, and since row <m>j</m> has zeros in columns <m>j+1</m> through <m>n</m>, none of the entries in rows <m>j+1</m> through <m>n</m> is changed in columns <m>j+1</m> through <m>n</m>.  The first <m>n</m> columns of <m>M^\prime</m> form a lower triangular matrix with 1's on the diagonal.  In its conversion to the identity matrix through this sequence of row operations, it remains lower triangular with 1's on the diagonal.</p>
                 <p>What happens in columns <m>n+1</m> through <m>2n</m> of <m>M^\prime</m>?  These columns began in <m>M</m> as the identity matrix, and in <m>M^\prime</m> each diagonal entry was scaled to a reciprocal of the corresponding diagonal entry of <m>A</m>.  Notice that trivially, these final <m>n</m> columns of <m>M^\prime</m> form a lower triangular matrix.  Just as we argued for the first <m>n</m> columns, the row operations that convert <m>M_{j-1}</m> into <m>M_j</m> will preserve the lower triangular form in the final <m>n</m> columns and preserve the exact values of the diagonal entries.  By <xref ref="theorem-CINM" acro="CINM"/>, the final <m>n</m> columns of <m>M_n</m> is the inverse of <m>A</m>, and this matrix has the necessary properties advertised in the conclusion of this theorem.</p>
             </proof>
         </theorem>
