@@ -37,7 +37,7 @@ describes nonsingular triangular matrices, with Example NSTM
 to illustrate.  Move Theorem PTMT about the product of
 triangular matrices moves from Section OD to Section MM.
 Move Theorem ITMT about inverses of triangular matrices
-from Section OD to Section MINM.
+from Section OD to Section MINM, and improve the proof.
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -74,6 +74,7 @@ Edit: Theorem SMEE, expand conclusion, edit proof
 Edit: Theorem DED, simplify the proof
 Edit: Theorem DC, minor changes to streamline proof
 Edit: Theorem SER, minor changes to streamline proof
+Edit: Edit the proof of Theorem ITMT
 Change: Streamline second half of the proof of Theorem BS
 Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
 Change: Theorems SSNS, BNS need case when n = r (Ken Price)
